--- a/_posts/2024-01-30-tarea-xsd.md
+++ b/_posts/2024-01-30-tarea-xsd.md
@@ -40,115 +40,212 @@ Comprobar con un validador online de sitemaps XML que "a01_validarSitemap.xml" e
 {:.activity}
 ### Mensaje entre personas
 
-Corregir los errores cometidos en el siguiente documento XML, para que sea válido. Para ello, no modificar la cuarta línea de código de "a03_mensaje.xsd".
+Corregir los errores cometidos en el siguiente documento XML, para que sea válido. Para ello, no modificar la cuarta línea de código de "a03_mensaje.xml".
 
 {:.activity}
 ### Definición de elementos simples
 
-
+Escribir sus definiciones de elementos simples correspondientes.
 
 {:.activity}
 ### Puerta cerrada y ventana abierta
 
-
-
+Definir un elemento llamado puertaCerrada de tipo lógico, que por defecto tenga el valor "falso", y otro elemento llamado ventanaAbierta también de tipo lógico, que tenga asignado el valor fijo "verdadero".
 
 {:.activity}
 ### Fichas de personas
 
-
-
+Escribir el contenido del archivo "a06_fichas.xsd" que permita validarlo.
 
 {:.activity}
 ### Edad entre 0 y 130 años
 
+Escribir el contenido del archivo "a07_edad.xsd" que permita validarlo, teniendo en cuenta que se debe definir la "edad" con la restricción de que el valor que tome no pueda ser menor que 0 ni mayor que 130. Además, en vez de xs:minInclusive y xs:maxInclusive, se debe utilizar:
 
+- xs:minExclusive que sirve para especificar que el valor debe ser mayor que el indicado.
+- xs:maxExclusive que sirve para especificar que el valor debe ser menor que el indicado.
 
 {:.activity}
 ### Precios de tres dígitos
 
+Escribir el contenido del archivo "a08_precios.xsd" que permita validarlo, teniendo en cuenta que el elemento "precio" puede tomar por valor un número que contenga tres dígitos como máximo y, de ellos, solamente dos pueden ser decimales. Para ello, escribir una restricción que no podrá ser utilizada por otros elementos y, por otra parte, haga uso de:
 
+- xs:totalDigits que sirve para especificar el número máximo de dígitos que puede tener un número, incluyendo a los decimales.
+- xs:fractionDigits que sirve para especificar el número máximo de decimales que puede tener un número.
 
 {:.activity}
 ### Tipo de vehículo
 
-
+¿De qué otro modo se puede definir el elemento "vehiculo" y un xs:simleType llamado tipoDeVehiculo que restringiese a "barco", "bicicleta", "coche" y "tren" como los únicos valores aceptables para el vehículo, de forma que dicho tipo pudiera ser también utilizado por otros elementos?
 
 {:.activity}
 ### Iniciales de personas famosas
 
-
+Dado el archivo "a10_iniciales.xsd". Corregir los errores cometidos en "a10_iniciales.xml", para que sea válido.
 
 {:.activity}
 ### Iniciales al revés
 
+Realizar los cambios necesarios en "a11_inicialesAlReves.xsd", para que "a11_inicialesAlReves.xml" sea válido.
 
+Nota: hay que tener en cuenta que el elemento iniciales-al-reves debe ser del mismo tipo que iniciales, y dicho tipo solamente deberá definirse una vez.
 
 {:.activity}
 ### Respuestas admitidas
 
+En el siguiente ejemplo se define un elemento llamado "respuesta" con la restricción de que el único valor aceptable es una de las siguientes letras: "A", "B", "C", "D" o "E":
 
+En vez de escribiendo "[ABCDE]", ¿de qué otras formas se podría especificar la misma restricción?
 
 {:.activity}
 ### Números y letras
 
+Escribir el contenido del archivo "a13_numerosYLetras.xsd" que permita validarlo, teniendo en cuenta que:
 
+Tanto el atributo numero como el elemento "código" utilizan la misma restricción que solamente les permite tomar un valor entero expresado con dos dígitos comprendidos entre "00" y "19".
+El atributo letra puede tomar por valor una de las siguientes letras: "X", "Y" o "Z". La restricción debe definirse de forma que solamente pueda ser utilizada por dicho atributo.
+Para cada ficha se tiene que indicar un número, obligatoriamente. Sin embargo, la letra es opcional.
 
 {:.activity}
 ### Escribir expresiones regulares
 
+En las expresiones regulares se pueden utilizar –entre otros– los siguientes símbolos:
 
+| Símbolos          | Significado                                                |
+|-------------------|------------------------------------------------------------|
+| .                 | Cualquier carácter.                                        |
+| \d                | Cualquier dígito del 0 al 9.                               |
+| \D                | Cualquier carácter que no sea un dígito del 0 al 9.        |
+| x*                | x puede aparecer cero o más veces.                         |
+| x+                | x debe aparecer al menos una vez.                          |
+| x?                | x puede aparecer una vez o no aparecer.                    |
+| [abc] o [a\|b\|c] | Cualquier carácter indicado entre los corchetes: a, b o c. |
+| [a-z]             | Cualquier carácter de la a a la z.                         |
+| x{n}              | x debe aparecer n veces.                                   |
+| x{n,m}            | x debe aparecer entre n y m veces.                         |
+| x{n,}             | x debe aparecer al menos n veces.                          |
+
+Teniendo en cuenta, solamente, los símbolos mostrados en la tabla anterior, escribir las posibles expresiones regulares que permitan representar los siguientes valores:
+
+| 1)     | "Capítulo 0", "Capítulo 1", "Capítulo 2"... "Capítulo 9". (Solo se permite un dígito).                                                                                                                                             |
+|--------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| 2)     | "Capítulo 0", "Capítulo 1", "Capítulo 2"... "Capítulo 99". (Uno o dos dígitos).                                                                                                                                                    |
+| 3)     | "Capítulo 1", "Capítulo 2", "Capítulo 3"... "Capítulo 99". (No se permite "Capítulo 0").                                                                                                                                           |
+| 4)     | "Capítulo 0", "Capítulo 1", "Capítulo 2"... "Capítulo 99"... "Capítulo 100"... (Uno o más dígitos).                                                                                                                                |
+| 5)     | Cualquier valor de dos caracteres, cuyo primer carácter sea distinto de un dígito (0-9) y cuyo segundo carácter sea "Z": "aZ"... "zZ", "AZ"... "ZZ", "?Z", "=Z", "*Z"...                                                           |
+| 6)     | "ABBC", "ABBBC", "ABBBBC", "ABBBBBC".                                                                                                                                                                                              |
+| 7)     | El primer carácter debe ser "R". A continuación, deben aparecer obligatoriamente dos o más "S". Finalmente, puede aparecer o no, un dígito del 3 al 8: "RSS", "RSSS"... "RSS3"... "RSS8", "RSSS3"... "RSSS8"... "RSSSSSSSSSSS7"... |
+| 8)     | Cualquier valor que contenga en primer lugar "COD", después tres dígitos (0-9) y, finalmente, uno o más caracteres cualesquiera: "COD645pera", "COD646manzana"...                                                                  |
+| [a-z]  | Cualquier carácter de la a a la z.                                                                                                                                                                                                 |
+| x{n}   | x debe aparecer n veces.                                                                                                                                                                                                           |
+| x{n,m} | x debe aparecer entre n y m veces.                                                                                                                                                                                                 |
+| x{n,}  | x debe aparecer al menos n veces.                                                                                                                                                                                                  |
 
 {:.activity}
 ### Letras admitidas
 
+En el siguiente ejemplo se define un elemento llamado "letras" con la restricción de que puede tomar por valor cero o más (*) letras minúsculas de la "a" a la "z":
 
+Nota: los paréntesis de la expresión regular se pueden omitir, escribiendo simplemente: [a-z]*
+
+Realizar los cambios necesarios en el código del ejemplo anterior para que "letras" pueda tomar por valor uno o más pares (+) de letras, y cada par de letras deberá estar formado por una letra mayúscula seguida de otra minúscula. Por ejemplo, "HoLa" sería admitido, pero no lo sería "Hola", "HOLa", "hola", etc.
 
 {:.activity}
 ### Longitud fija de una clave
 
-
+Definir un elemento "clave" que pueda tomar por valor exactamente diez caracteres, los cuales podrán ser letras mayúsculas o minúsculas de la "a" a la "z", o dígitos del "0" al "9". Por ejemplo, serán válidos los valores siguientes: "abcde12345", "Clave55ABC", "1A2b3c4D5f", etc.
 
 {:.activity}
 ### Longitud mínima y máxima de una clave
 
+Dado el documento "a17_longitudMinMax.xml". Escribir el contenido del archivo "a17_longitudMinMax.xsd" que permita validarlo, teniendo en cuenta que el elemento "clave" debe poder tomar por valor un mínimo de cuatro caracteres y un máximo de diez. Dichos caracteres pueden ser indistintamente letras mayúsculas o minúsculas de la "a" a la "z", o dígitos del "0" al "9". La restricción solamente podrá aplicarse al elemento "clave".
 
+Para ello, se debe utilizar xs:pattern y también:
+
+- `xs:minLength` que permite especificar la longitud mínima.
+- `xs:maxLength` que permite especificar la longitud máxima.
 
 {:.activity}
 ### Información de persona ampliada
 
+Dado el archivo "fichas.xsd":
 
+Añadir, al archivo "fichas.xsd", la definición de un nuevo elemento complexType llamado "infoPersonaAmpliada2" que amplíe la definición de "infoPersonaAmpliada", permitiendo validar el siguiente documento XML:
 
 {:.activity}
 ### Precios de artículos
 
-
+Dado el archivo "a19_preciosArticulos.xsd". Realizar los cambios necesarios en el archivo "a19_preciosArticulos.xsd" para que permita validar el documento XML "a19_preciosArticulos.xml".
 
 {:.activity}
 ### Información de ubicaciones
+
+Dado el archivo "a20_infoUbicaciones.xsd". Añadir, al archivo "ubicaciones.xsd", la definición de un nuevo elemento complexType llamado "infoUbicacion" que amplíe la definición de "direccion", permitiendo validar el siguiente documento XML:
 
 
 
 {:.activity}
 ### Colores de muebles
 
+Haciendo uso del siguiente código:
 
+```xml
+<xs:complexType name="tipoColorMueble">
+  <xs:simpleContent>
+    <xs:extension base="tipoMueble">
+      <xs:attribute name="color">
+        <xs:simpleType>
+          <xs:restriction base="xs:string">
+            <xs:enumeration value="blanco" />
+            <xs:enumeration value="gris" />
+            <xs:enumeration value="negro" />
+            <xs:enumeration value="wengue" />
+          </xs:restriction>
+        </xs:simpleType>
+      </xs:attribute>
+    </xs:extension>
+  </xs:simpleContent>
+</xs:complexType>
 
+<xs:simpleType name="tipoMueble">
+  <xs:restriction base="xs:string">
+    <xs:enumeration value="armario" />
+    <xs:enumeration value="mesa" />
+    <xs:enumeration value="silla" />
+  </xs:restriction>
+</xs:simpleType>
+```
+
+Escribir el contenido del archivo "a21_coloresMuebles.xsd" que permita validar el documento "a21_coloresMuebles.xml".
 
 {:.activity}
 ### Números del bingo
 
+Dado el archivo "a22_numerosBingo.xsd":
 
+xs:positiveInteger es un tipo de dato predefinido derivado, que admite números enteros positivos mayores que cero.
+
+Escribir el código de un documento XML que pueda ser validado por "a22_numerosBingo.xsd" y almacene los números 17, 23 y 65.
 
 {:.activity}
 ### Información de personas en contenido mixto
 
+Dado el archivo "personas.xsd":
 
+Utilizando los elementos "nombre", "ciudad" y "edad", escribir el código de un documento XML que pueda ser validado por "personas.xsd" y que almacene la siguiente información:
+
+"Eva vive en París y tiene 25 años."
+"Giovanni vive en Florencia y tiene 26 años."
 
 {:.activity}
 ### Panel de vuelos
 
+Si para representar la siguiente información ficticia:
 
+| Código | Diario | Origen   | Destino | Hora salida | Hora llegada | Estado |
+|--------|--------|----------|---------|-------------|--------------|--------|
+| V22    | SI     | New York | Chicago | 9:30        | 11:30        | R      |
+| V23    | NO     | New York | Miami   | 10:15       | 11:15        | C      |
 
 {:.activity}
 ### Factura
