--- a/_posts/2024-01-30-tarea-xsd.md
+++ b/_posts/2024-01-30-tarea-xsd.md
@@ -1,9 +1,9 @@
 ---
-title: "Tarea: DTD"
-date: 2024-01-29 9:00:00 +0100
+title: "Tarea: XSD"
+date: 2024-01-30 9:00:00 +0100
 categories: [Desarrollo de Aplicaciones Multiplataforma, Lenguajes de Marcas y Sistemas de Gestión de Información]
 tags: [desarrollo de aplicaciones multiplataforma, lenguajes de marcas y sistemas de gestión de información, administración de sistemas informáticos de red, práctica, tarea, dam, daw, asir]
-img_path: /assets/img/tarea-dtd/
+img_path: /assets/img/tarea-xsd/
 ---
 
 ## Entrega y presentación
@@ -14,7 +14,6 @@ Ejemplo de entrega:
 
 ```plaintext
 mruizg_t10.zip
-
 ```
 
 ## Calificación
@@ -182,8 +181,6 @@ Dado el archivo "a19_preciosArticulos.xsd". Realizar los cambios necesarios en e
 
 Dado el archivo "a20_infoUbicaciones.xsd". Añadir, al archivo "ubicaciones.xsd", la definición de un nuevo elemento complexType llamado "infoUbicacion" que amplíe la definición de "direccion", permitiendo validar el siguiente documento XML:
 
-
-
 {:.activity}
 ### Colores de muebles
 
@@ -247,19 +244,153 @@ Si para representar la siguiente información ficticia:
 | V22    | SI     | New York | Chicago | 9:30        | 11:30        | R      |
 | V23    | NO     | New York | Miami   | 10:15       | 11:15        | C      |
 
+se ha escrito el siguiente documento XML:
+
+Escribir el código del archivo "a24_panelVuelos.xsd" que permita validarlo, teniendo en cuenta que:
+
+No debe utilizarse ni group ni attributeGroup.
+El nombre del aeropuerto, los vuelos y la fecha pueden aparecer en distinto orden.
+Se tiene que indicar que el código ha de ser único (esto se puede hacer definiéndolo de tipo xs:ID) y obligatorio para cada vuelo.
+Haciendo uso pattern indicar que los posibles estados de un vuelo son C (Cancelado), E (En hora), R (Retrasado). Dicha restricción sólo debe poder ser utilizada por el atributo estado. El valor por defecto debe ser E.
+Debe permitirse aparecer desde cero hasta ilimitados elementos vuelo y, para cada uno de ellos, se tiene que guardar la información en el mismo orden en el que aparece en el panel.
+Para indicar si un vuelo es diario, se debe utilizar un elemento vacío que, respecto a cada vuelo, podrá aparecer (en el caso de sí ser diario) o no aparecer (en el caso contrario).
+Respecto a los elementos nombre, origen, destino, hora-llegada, hora-salida y fecha, cada uno de ellos debe definirse del tipo que se considere más apropiado, de entre los proporcionados por XML Schema.
+
 {:.activity}
 ### Factura
 
+Si para representar la información contenida en la siguiente factura ficticia:
 
+FACTURA NÚMERO 27 – FECHA: 18/12/2013:
+
+| DATOS EMISOR:       | DATOS CLIENTE:      |
+|---------------------|---------------------|
+| Librería Pérez      | Biblioteca Txantrea |
+| CIF: 44555666B      | CIF: 33111222A      |
+| Teléfono: 777888999 | Teléfono: 333999444 |
+
+Detalle de la factura:
+
+| CÓDIGO-ARTÍCULO | TIPO  | DESCRIPCIÓN       | CANTIDAD | OFERTA | PVP |
+|-----------------|-------|-------------------|----------|--------|-----|
+| AW7             | Libro | Analítica Web 2.0 | 1        | SI     | 35€ |
+| CP5             | Varios   | Curso de HTML     | 2        | NO     | 40€ |
+| IMPORTE:        |       |                   |          |        | 95€ |
+
+se ha escrito el siguiente documento XML:
+
+Escribir el código del archivo "factura.xsd" que permita validarlo, teniendo en cuenta que:
+
+Exceptuando los elementos datos-emisor, datos-cliente y detalle-factura, que no tienen porqué aparecer en este orden, el resto de elementos representados en el documento XML, sí deben escribirse obligatoriamente en el orden en el que aparecen.
+Excepto para los hijos directos del elemento factura, siempre que sea posible agrupar al menos dos elementos o dos atributos, se debe usar group o attributeGroup, respectivamente.
+Respecto al número de la factura (que debe ser un valor entero mayor que 0) y su fecha de emisión (de tipo xs:date), hay que indicar que son atributos obligatorios.
+El atributo moneda debe indicarse que es un valor fijo.
+Los nombres del emisor y cliente, así como, la descripción de cada artículo, deben ser del mismo tipo, al que llamaremos tipoTexto, y donde debe indicarse que los valores admitidos para dichos elementos pueden ser cadenas de un mínimo de 5 caracteres y un máximo de 20.
+Haciendo uso pattern hay que indicar que el valor del cif debe estar formado por una cadena de ocho dígitos del 0 al 9, seguidos de un guión "-" y una letra mayúscula de la "A" a la "Z". Dicha restricción sólo debe poder ser utilizada por el elemento cif.
+Haciendo uso pattern hay que indicar que el valor del teléfono debe estar formado por una cadena de nueve dígitos del 0 al 9. Dicha restricción sólo debe poder ser utilizada por el teléfono.
+Al menos tiene que aparecer una línea de detalle y como máximo 15.
+El importe debe indicarse que es obligatorio.
+El importe y el pvp deben ser del mismo tipo, al que llamaremos tipoPrecio, y donde debe indicarse, sin hacer uso de pattern, que los valores admitidos por este tipo pueden ser números decimales mayores que 0, pero no mayores que 999. Además, dichos valores podrán contener cinco dígitos como máximo y, de ellos, sólo dos podrán ser decimales.
+El código del artículo ha de ser único y obligatorio para cada artículo.
+Sin hacer uso pattern indicar que los posibles tipos de un artículo son Libro, DVD o Varios, no permitiéndose otro valor. Para ello, se debe definir un tipo de dato llamado tipoArtículo, que debe poder ser utilizado por otros atributos o elementos. Ahora bien, hay que tener en cuenta que este atributo es opcional.
+La cantidad de artículos indicada en cada línea, debe ser un valor entero mayor que 0.
+Para indicar si un artículo está de oferta, se debe utilizar un elemento vacío que, respecto a cada artículo, podrá aparecer (en el caso de sí estar de oferta) o no aparecer (en el caso contrario).
+No hay que definir más tipos de datos que los especificados en el ejercicio: tipoTexto, tipoArtículo y tipoPrecio.
 
 {:.activity}
 ### Registro de conexiones
 
+Si para representar la siguiente información ficticia:
 
+REGISTRO DE CONEXIONES DE USUARIOS Y EMPLEADOS DE UNA EMPRESA
+
+USUARIOS:
+
+| IDENTIFICADOR NOMBRE APELLIDOS EMAIL    | CONEXIONES (FECHA HORA TIEMPO)                                         |
+|-----------------------------------------|------------------------------------------------------------------------|
+| `U123&Ana&Sanz Tapia&asanz@jmail.com`     | `2014-02-23&19:15:40&122 2014-02-23&20:30:22&617 2014-02-24&11:18:31&25` |
+| `U96&Pedro&Ruiz Hierro&pruiz@jotmail.com` | `2014-02-25&20:33:55&390`                                                |
+
+EMPLEADOS:
+
+| IDENTIFICADOR NOMBRE APELLIDOS EMAIL DEPARTAMENTO | CONEXIONES (FECHA HORA TIEMPO) |
+|---------------------------------------------------|--------------------------------|
+| `E4&Marta&Vera Gil&mvera@yajoo.es&Marketing`        | `(Ninguna)`                      |
+
+se ha escrito el siguiente documento XML:
+
+Escribir el código del archivo "registro.xsd" que permita validarlo, teniendo en cuenta que:
+
+Todos los elementos y atributos son obligatorios, a menos que se indique lo contrario.
+Siempre que sea posible agrupar al menos dos elementos o dos atributos, se debe utilizar group o attributeGroup, respectivamente.
+Pueden aparecer de cero a ilimitados usuarios y, a continuación, de cero a ilimitados empleados.
+Usuario debe ser de un tipo definido por nosotros al que llamaremos tipoPersona, donde hay que definir los elementos apellidos-y-nombre, email y conexiones. Por otro lado, empleado ha de ser de otro tipo llamado tipoPersonaAmpliado, definido como una extensión de tipoPersona añadiéndosele el elemento departamento. El orden en que tienen que aparecer los elementos hijo de usuario y empleado, debe ser obligatoriamente el escrito en el documento XML.
+El valor del identificador debe ser una cadena formada por una letra "U" o "E" mayúscula, seguida de uno a cinco dígitos del 0 al 9.
+El valor del elemento apellidos-y-nombre debe ser una cadena de entre 1 a 30 caracteres (de la "a" a la "z", mayúsculas o minúsculas, o el carácter espacio en blanco) para los apellidos, seguida del carácter coma "," y de entre 1 a otras 20 letras (de la "a" a la "z", también mayúsculas o minúsculas, o el carácter espacio en blanco) para el nombre.
+El valor del email puede ser una cadena formada por 1 a 15 caracteres de la "a" a la "z", seguida del carácter "@", seguido de entre 1 a otras 25 letras de la "a" a la "z", seguidas del carácter punto "." y de entre otras 2 a 4 letras de la "a" a la "z".
+De cada usuario y empleado se reflejan sus conexiones, indicando para cada conexión la cantidad de segundos que duró, que debe ser un número entero mayor que cero. Hay que tener en cuenta que, como se puede ver en el documento XML, pueden aparecer desde cero hasta ilimitados elementos conexión.
+Respecto a los atributos fecha y hora, cada uno de ellos debe definirse del tipo que se considere más apropiado, de entre los proporcionados por XML Schema.
+Los posibles departamentos de la empresa a los que puede pertenecer un empleado son administración, informática o marketing. De tal forma que, para cada empleado, sólo uno de ellos debe escribirse en el documento XML mediante un elemento vacío, como en este caso se ha escrito `<marketing />`.
+No hay que definir más tipos de datos que los indicados en el ejercicio: tipoPersona y tipoPersonaAmpliado.
 
 {:.activity}
 ### Personal de departamentos
 
+Si para representar la siguiente información ficticia:
+
+![Información del personal de los departamentos](tablaPersonalDepartamentos.png)
+_Información del personal de los departamentos_
+
+Representación de la información ficticia del personal de los departamentos de una empresa:
+
+Escribir el código del archivo “personal.xsd” que permita validarlo, teniendo en cuenta que:
+
+- Todos los elementos y atributos son obligatorios, a menos que se indique lo contrario.
+- Los elementos datos-generales y datos-departamentos pueden aparecer indistintamente uno antes que el otro.
+- Excepto para los hijos directos de los elementos personal, datos-generales y departamento, siempre que sea
+posible agrupar al menos dos elementos o dos atributos, se debe utilizar group o attributeGroup.
+- Los datos generales de la empresa deben ser de un tipo definido por nosotros al que llamaremos
+tipoDatosGenerales, donde hay que definir los elementos nombre-empresa, número-trabajadores (que debe ser
+un valor entero mayor que 0) y sector. Estos elementos deben escribirse en dicho orden en el documento XML.
+- El atributo fecha debe definirse del tipo que se considere más apropiado, de entre los proporcionados por XML
+Schema.
+- El atributo multinacional indica si la empresa lo es, o no, con un valor lógico.
+- El atributo moneda debe indicarse que es un valor fijo. Pero, no es obligatorio.
+- El elemento nombre-empresa y el elemento nombre-y-apellidos de los trabajadores, deben ser del mismo tipo, al
+que llamaremos tipoTexto, y donde debe indicarse que los valores admitidos para dichos elementos pueden ser
+cadenas de un mínimo de 1 carácter y un máximo de 40.
+- Los posibles sectores son educación, finanzas o tecnología. De tal forma que, sólo uno de ellos debe escribirse en
+el archivo XML mediante un elemento vacío, como en este caso se ha escrito <tecnología />.
+- Se tiene que indicar que el código de cada departamento ha de ser único.
+- Sin hacer uso pattern indicar que los posibles nombres de departamento son Administración, Informática,
+Marketing o Recursos humanos, no permitiéndose otro valor. Para ello, se debe definir un tipo de dato llamado
+tipoDepartamento, que debe poder ser utilizado por otros atributos o elementos.
+- Empleado (en cada departamento puede haber de 0 a 3) debe ser de un tipo definido por nosotros al que
+
+llamaremos tipoEmpleado, donde hay que definir los posibles valores que pueden tener los elementos nombre-y-
+apellidos, baja y salario (que deberán escribirse en ese orden en el documento XML). Por otro lado, jefe
+
+(obligatoriamente habrá 1 por departamento) ha de ser de otro tipo llamado tipoJefe, definido como una
+extensión de tipoEmpleado añadiéndole el elemento clave.
+
+- De cada departamento (pueden haber de 1 a ilimitados), primero debe escribirse el jefe y, después, los
+empleados que hubiese.
+- Para indicar si un trabajador está de baja, se debe utilizar un elemento vacío, que podrá aparecer (en el caso de
+que sí esté de baja) o no aparecer (en el caso contrario).
+- Sin hacer de uso pattern hay que indicar que el valor del salario debe ser un número decimal mayor que 1000,
+pero no mayor que 9999. Además, dicho valor podrá contener 6 dígitos como máximo y, de ellos, sólo dos podrán
+ser decimales.
+- La clave debe ser de un tipo definido por nosotros al que llamaremos tipoClave, y donde debe indicarse, que los
+valores admitidos por este tipo pueden ser cadenas de ocho caracteres donde el primero debe ser un dígito del 0
+al 9; el segundo debe ser un carácter distinto a un dígito; después, pueden aparecer de 2 a 4 letras de la “a” a la
+“z”; posteriormente, podrá aparecer, o no, una letra de la “A” a la “Z”; a continuación, tendrá que estar una de
+estas tres letras mayúsculas (K, Y, H); y finalmente, podrá aparecer de 0 a 3 caracteres cualesquiera.
+- Usuario no es un atributo obligatorio. Ahora bien, si se escribe, debe estar formado por un mínimo de 6
+caracteres y un máximo de 8 (hay que escribir esta restricción sin hacer uso de pattern). Por otro lado, se debe
+indicar “invitado” como su valor por defecto.
+- No hay que definir en el schema más tipos de datos que los indicados en el ejercicio: tipoDatosGenerales,
+tipoDepartamento, tipoEmpleado, tipoJefe, tipoTexto y tipoClave.
+
 ## Bibliografía
 
-- <https://www.abrirllave.com/dtd/ejercicios-resueltos.php>
+- <https://www.abrirllave.com/xsd/ejercicios-resueltos.php>
