--- a/_posts/2024-01-20-dtd.md
+++ b/_posts/2024-01-20-dtd.md
@@ -6,7 +6,7 @@ tags: [desarrollo de aplicaciones multiplataforma, lenguajes de marcas y sistema
 img_path: /assets/img/dtd/
 ---
 
-> Se recomienda la lectura de este artículo hasta la sección "7.5. Atributos de tipo IDREFS" incluida. El resto de secciones pueden ser leídas cuando se tenga la necesidad específica cuando se realice la tarea correspondiente.
+> Se recomienda la lectura de este artículo hasta la sección "7.5. Atributos de tipo IDREFS" incluida y la sección "12. Comentarios". El resto de secciones pueden ser consultadas cuando sea necesario.
 {:.prompt-info}
 
 {:.section}
