--- a/_posts/2024-01-21-xsd.md
+++ b/_posts/2024-01-21-xsd.md
@@ -38,7 +38,7 @@ xsi:noNamespaceSchemaLocation="marcadores.xsd">
 </marcadores>
 ```
 
-- Para vincular un esquema a un documento XML, es obligatorio que este último haga referencia al espacio de nombres <http://www.w3.org/2001/XMLSchema-instance>. Para ello, habitualmente se utiliza el prefijo `xsi`.
+- Para vincular un esquema a un documento XML, es obligatorio que este último haga referencia al espacio de nombres `http://www.w3.org/2001/XMLSchema-instance`. Para ello, habitualmente se utiliza el prefijo `xsi`.
 - El atributo `noNameSchemaLocation` permite referenciar a un archivo con la definición de un esquema que no tiene ningún espacio de nombres asociado. En este caso, dicho archivo es `marcadores.xsd`{: .filepath}.
 
 El esquema XML guardado en `marcadores.xsd`{: .filepath} y que permita validar el documento XML `marcadores.xml`{: .filepath} podría ser:
@@ -379,7 +379,7 @@ XML Schema permite definir restricciones a los posibles valores de los tipos de 
 Dicho de otro modo, las facetas permiten definir restricciones sobre los posibles valores de atributos o elementos. Las facetas que pueden utilizarse son:
 
 |       Faceta      |                                                                       Descripción                                                                      |
-|:-----------------:|:------------------------------------------------------------------------------------------------------------------------------------------------------:|
+|:-----------------|:------------------------------------------------------------------------------------------------------------------------------------------------------|
 | `xs:length`         | Especifica una longitud fija.                                                                                                                          |
 | `xs:minLength`      | Especifica una longitud mínima.                                                                                                                        |
 | `xs:maxLength`      | Especifica una longitud máxima.                                                                                                                        |
