--- a/_posts/2024-01-29-tarea-dtd.md
+++ b/_posts/2024-01-29-tarea-dtd.md
@@ -98,12 +98,12 @@ PANEL DE VUELOS DE SALIDA DEL AEROPUERTO JFK – 20/12/2013:
 
 Consideraciones respecto a la DTD:
 
-1. Hay que guardar el nombre del aeropuerto, los datos de cada vuelo agrupados y la fecha del panel, en ese orden.
-1. En la DTD, sólo el código de un vuelo y su estado deben representarse mediante atributos.
-1. Se tiene que indicar que el código ha de ser único y obligatorio para cada vuelo.
-1. Los posibles estados de un vuelo son C (Cancelado), E (En hora), R (Retrasado). El valor por defecto debe ser E.
-1. En la DTD debe indicarse que al menos tiene que aparecer un vuelo y, para cada uno de ellos, se tiene que guardar la información en el mismo orden en el que aparece en el panel.
-1. Para indicar si un vuelo es semanal, se debe utilizar un elemento vacío que, respecto a cada vuelo, podrá aparecer (en el caso de sí ser semanal) o no aparecer (en el caso contrario).
+1. Hay que guardar el `nombre` del aeropuerto, los datos de cada `vuelo` agrupados y la `fecha` del panel, en ese orden.
+1. En la DTD, sólo el `código` de un vuelo y su `estado` deben representarse mediante atributos.
+1. Se tiene que indicar que el `código` ha de ser único y obligatorio para cada vuelo.
+1. Los posibles `estados` de un vuelo son `C` (Cancelado), `E` (En hora), `R` (Retrasado). El valor por defecto debe ser `E`.
+1. En la DTD debe indicarse que al menos tiene que aparecer un `vuelo` y, para cada uno de ellos, se tiene que guardar la información en el mismo orden en el que aparece en el panel.
+1. Para indicar si un vuelo es `semanal`, se debe utilizar un elemento vacío que, respecto a cada vuelo, podrá aparecer (en el caso de sí ser semanal) o no aparecer (en el caso contrario).
 
 {:.activity}
 ### Factura
@@ -115,12 +115,12 @@ FACTURA NÚMERO 27 – FECHA: 18/12/2013:
 | DATOS EMISOR:       | DATOS CLIENTE:      |
 |---------------------|---------------------|
 | Librería Pérez      | Biblioteca Txantrea |
-| CIF: 44555666B      | CIF: 33111222A      |
+| CIF: 25489194L      | CIF: 68147997D      |
 | Teléfono: 777888999 | Teléfono: 333999444 |
 
 Detalle de la factura:
 
-| CÓDIGO-ARTÍCULO | TIPO  | DESCRIPCIÓN       | CANTIDAD | OFERTA | PVP |
+| CÓDIGO-ARTÍCULO | TIPO  | DESCRIPCIÓN       | CANTIDAD | REACONDICIONADO | PVP |
 |-----------------|-------|-------------------|----------|--------|-----|
 | AW7             | Libro | Analítica Web 2.0 | 1        | SI     | 35€ |
 | CP5             | Varios   | Curso de HTML     | 2        | NO     | 40€ |
@@ -128,14 +128,14 @@ Detalle de la factura:
 
 Consideraciones respecto a la DTD:
 
-1. Hay que guardar los datos del emisor de la factura agrupados. A continuación, los datos del cliente, también agrupados. Y finalmente, los datos de detalle donde se escriben (en líneas) los datos de cada artículo, así como, el importe total.
-1. Obsérvese que en cada línea se indica el código de un artículo, el tipo al que pertenece, su descripción, la cantidad facturada, si está de oferta o no, y el PVP (Precio de Venta al Público). Ahora bien, de los datos que aparecen en cada línea, sólo el código del artículo y el tipo deben representarse mediante atributos en la DTD.
-1. Se tiene que indicar que el código del artículo ha de ser único y obligatorio para cada artículo.
-1. Los posibles tipos de un artículo son Libro, DVD o Varios, no permitiéndose otro valor. Ahora bien, este atributo debe indicarse que es opcional.
-1. El importe debe representarse por medio de un elemento, que debe ser obligatorio.
-1. En la DTD debe indicarse que al menos tiene que aparecer una línea de detalle y, para cada una de ellas, se tiene que guardar la información en el mismo orden en el que aparece en la factura.
-1. Para indicar si un artículo está de oferta, se debe utilizar un elemento vacío que, respecto a cada artículo, podrá aparecer (en el caso de sí estar de oferta) o no aparecer (en el caso contrario).
-1. Respecto al número de la factura y su fecha de emisión, deben representarse mediante atributos obligatorios donde se estime más apropiado.
+1. Hay que guardar los `datos del emisor` de la factura agrupados. A continuación, los datos del cliente, también agrupados. Y finalmente, los `datos de detalle` donde se escriben (en líneas) los datos de cada artículo, así como, el `importe` total.
+1. Obsérvese que en cada `línea` se indica el código de un artículo, el tipo al que pertenece, su descripción, la cantidad facturada, si está reacondicionado o no, y el PVP (Precio de Venta al Público). Ahora bien, de los datos que aparecen en cada línea, sólo el `código del artículo` y el `tipo` deben representarse mediante atributos en la DTD.
+1. Se tiene que indicar que el `código del artículo` ha de ser único y obligatorio para cada artículo.
+1. Los posibles `tipos` de un artículo son `Libro`, `DVD` o `Varios`, no permitiéndose otro valor. Ahora bien, este atributo debe indicarse que es opcional.
+1. El `importe` debe representarse por medio de un elemento, que debe ser obligatorio.
+1. En la DTD debe indicarse que al menos tiene que aparecer una `línea` de detalle y, para cada una de ellas, se tiene que guardar la información en el mismo orden en el que aparece en la factura.
+1. Para indicar si un artículo está `reacondicionado`, se debe utilizar un elemento vacío que, respecto a cada artículo, podrá aparecer (en el caso de sí estar reacondicionado) o no aparecer (en el caso contrario).
+1. Respecto al `número` de la factura y su `fecha` de emisión, deben representarse mediante atributos obligatorios donde se estime más apropiado.
 
 {:.activity}
 ### (Voluntaria) Liga de futbol
@@ -155,9 +155,9 @@ Escribe tres documentos que incluyan los siguientes resultados:
 
 Cada documento incluirá un DTD diferente para representar ese lenguaje de marcas:
 
-- Una DTD en la que no haya atributos, sino únicamente etiquetas
-- Una DTD en la que los goles sean atributos
-- Una DTD en la que toda la información se guarde en forma de atributos
+- Una DTD en la que no haya atributos, sino únicamente etiquetas.
+- Una DTD en la que los goles sean atributos.
+- Una DTD en la que toda la información se guarde en forma de atributos.
 
 ## Bibliografía
 
